feat(savesession): implement account ID mutation
